crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_decorator_tag_with_explicit_name.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
