crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_defaultfilters.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(&source, \"django.template.defaultfilters\"))"
---
tag_rules: {}
filter_arities:
  "django.template.defaultfilters::add":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::addslashes":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::capfirst":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::center":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::cut":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::date":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::default":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::default_if_none":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::dictsort":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::dictsortreversed":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::divisibleby":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::escape":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::escapejs":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::escapeseq":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::filesizeformat":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::first":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::floatformat":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::force_escape":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::get_digit":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::iriencode":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::join":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::json_script":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::last":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::length":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::linebreaks":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::linebreaksbr":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::linenumbers":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::ljust":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::lower":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::make_list":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::phone2numeric":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::pluralize":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::pprint":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::random":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::rjust":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::safe":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::safeseq":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::slice":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::slugify":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::stringformat":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::striptags":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::time":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::timesince":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::timeuntil":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::title":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::truncatechars":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::truncatechars_html":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::truncatewords":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::truncatewords_html":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::unordered_list":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::upper":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::urlencode":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::urlize":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::urlizetrunc":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::wordcount":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::wordwrap":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::yesno":
    expects_arg: true
    arg_optional: true
block_specs: {}
