crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_django_static.snap
---
source: crates/djls-extraction/src/lib.rs
expression: result
---
tag_rules: {}
filter_arities: {}
block_specs: {}
