crates/djls-extraction/src/snapshots/djls_extraction__tests__golden_empty_source.snap
---
source: crates/djls-extraction/src/lib.rs
expression: "snapshot(extract_rules(\"\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
